--- a/src/frontends/android/api/src/main/res/values/strings.xml
+++ b/src/frontends/android/api/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@ All rights reserved.
     <string name="vpn_profile_bundle_allowed_applications">allowed_applications</string>
     <string name="vpn_profile_bundle_logging_level">logging_level</string>
     <string name="vpn_profile_bundle_by_yubikey">by_yubikey</string>
+    <string name="vpn_profile_bundle_exclude_package_name">exclude_package_name</string>
     <string name="vpn_profile_bundle_type_key">type</string>
     <string name="vpn_profile_bundle_type_ikev2_eap_value">ikev2-eap</string>
     <string name="vpn_profile_bundle_type_ikev2_cert_value">ikev2-cert</string>
