add fancyfon components

--- a/src/frontends/android/app/src/main/res/values-pl/strings.xml
+++ b/src/frontends/android/app/src/main/res/values-pl/strings.xml
@@ -227,4 +227,6 @@
     <string name="tile_connect">Connect VPN</string>
     <string name="tile_disconnect">Disconnect VPN</string>
 
+    <string name="yubikey_profile_not_found">Nie odnaleziono profilu Yubikey</string>
+
 </resources>
