--- a/src/frontends/android/app/src/main/res/values/strings.xml
+++ b/src/frontends/android/app/src/main/res/values/strings.xml
@@ -227,6 +227,13 @@
     <string name="tile_connect">Connect VPN</string>
     <string name="tile_disconnect">Disconnect VPN</string>
 
+    <!-- simple logging -->
+    <string name="simple_log_no_network_access">No Internet access</string>
+    <string name="simple_log_connected">Connected to server</string>
+    <string name="simple_log_disconnected">Disconnected from server</string>
+    <string name="simple_log_auth_failed">User authentication failed</string>
+
+
     <string name="yubikey_profile_not_found">Yubikey profile not found</string>
 
 </resources>
