re-connect after timeout

--- a/src/frontends/android/app/src/main/res/values-pl/strings.xml
+++ b/src/frontends/android/app/src/main/res/values-pl/strings.xml
@@ -177,6 +177,7 @@
     <string name="disconnect">Rozłącz</string>
     <string name="state_connecting">Łączenie&#8230;</string>
     <string name="state_connected">Połączony</string>
+    <string name="state_connected_no_internet">Połączony (Brak sieci)</string>
     <string name="state_disconnecting">Przerywam połączenie&#8230;</string>
     <string name="state_disabled">Brak aktywnego VPN</string>
     <string name="state_error">Błąd</string>
